@@ -187,9 +187,10 @@ bool CResourceBase::LoadResources(CResourceScript *pScript)
 	// Open the file then load it
 	if ( !pScript )
 		return false;
+
 	if ( !pScript->Open() )
 	{
-		g_Log.Event(LOGL_CRIT, "[RESOURCES] '%s' not found...\n", static_cast<LPCTSTR>(pScript->GetFilePath()));
+		g_Log.Event(LOGL_CRIT, "File '%s' not found\n", static_cast<LPCTSTR>(pScript->GetFilePath()));
 		return false;
 	}
 
